--- a/Nagpur.html
+++ b/Nagpur.html
@@ -16,7 +16,7 @@
     <link href="./Prixima BS5 Template_files/boxicons.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="./Prixima BS5 Template_files/style.css" />
 
-     <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -28,13 +28,13 @@
     <div class="top-nav" id="home">
         <div class="container">
             <div class="row justify-content-between">
-                 <div class="col-auto">
-                    <a href="">
-                        <p><i class="fa fa-envelope"></i> info@example.com</p>
-                    </a>
-                    <a href="">
-                        <p><i class="fa fa-phone"></i>+91-9898027250</p>
-                    </a>
+                <div class="col-auto">
+
+                    <p><i class="fa fa-envelope"></i> info@example.com</p>
+
+
+                    <p><i class="fa fa-phone"></i>+91-9898027250</p>
+
                 </div>
                 <div class="col-auto social-icons">
                     <a href=""><i class="fa fa-facebook"></i></a>
@@ -48,7 +48,8 @@
     <!-- BOTTOM NAV -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top">
         <div class="container">
-            <a class="navbar-brand" href=""><img src="Prixima BS5 Template_files/logo12.png" style="width: 250px; height: 80px;"><span class="dot">.</span></a>
+            <a class="navbar-brand" href=""><img src="Prixima BS5 Template_files/logo12.png"
+                    style="width: 250px; height: 80px;"><span class="dot">.</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -137,7 +138,17 @@
                             <h1 class="txt_color">Overview</h1>
                             <h3>Nagpur Plots</h3>
                             <h5>Near Samruddhi Expressway Nagpur</h5>
-                            <p class="mx-auto">Welcome to Nagpur Plots, a prime real estate project strategically situated in the heart of Nagpur, offering unparalleled connectivity to the city's key hubs. Our development harmoniously blends serene green landscapes with cutting-edge urban design, providing residents with nature-inspired living and advanced civic amenities. Nagpur Plots is committed to sustainability and smart living, incorporating eco-friendly architecture and IoT technology. Embrace the convenience of modern infrastructure while cherishing the restoration of historic buildings and preserving cultural significance. Invest in the future Near Samruddhi Expressway Nagpur Plots, where economic prosperity meets real estate growth potential, contributing to the city's booming real estate market. Discover a lifestyle that combines strategic location, natural beauty, and forward-thinking design in this urban oasis.</p>
+                            <p class="mx-auto">Welcome to Nagpur Plots, a prime real estate project strategically
+                                situated in the heart of Nagpur, offering unparalleled connectivity to the city's key
+                                hubs. Our development harmoniously blends serene green landscapes with cutting-edge
+                                urban design, providing residents with nature-inspired living and advanced civic
+                                amenities. Nagpur Plots is committed to sustainability and smart living, incorporating
+                                eco-friendly architecture and IoT technology. Embrace the convenience of modern
+                                infrastructure while cherishing the restoration of historic buildings and preserving
+                                cultural significance. Invest in the future Near Samruddhi Expressway Nagpur Plots,
+                                where economic prosperity meets real estate growth potential, contributing to the city's
+                                booming real estate market. Discover a lifestyle that combines strategic location,
+                                natural beauty, and forward-thinking design in this urban oasis.</p>
                         </div>
                     </div>
                 </div>
@@ -182,7 +193,12 @@
                         <h6>Our Services</h6>
                         <h1 class="">Amenities</h1>
                         <p class="mx-auto">
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde mollitia aut hic ut, minus veritatis, omnis consequuntur reprehenderit, quaerat consectetur amet molestias rem. Aut in quidem laborum nobis illo quas vel quos deserunt minima provident? Sit, quod? Sint alias nobis earum! Dolorem porro modi quae architecto repellat cum. Accusantium possimus est quos velit, deserunt, quis totam illum rem, excepturi dicta quisquam voluptate perspiciatis consectetur omnis harum tenetur.
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde mollitia aut hic ut, minus
+                            veritatis, omnis consequuntur reprehenderit, quaerat consectetur amet molestias rem. Aut in
+                            quidem laborum nobis illo quas vel quos deserunt minima provident? Sit, quod? Sint alias
+                            nobis earum! Dolorem porro modi quae architecto repellat cum. Accusantium possimus est quos
+                            velit, deserunt, quis totam illum rem, excepturi dicta quisquam voluptate perspiciatis
+                            consectetur omnis harum tenetur.
                         </p>
                     </div>
                 </div>
@@ -348,12 +364,19 @@
                     <span aria-label="Next">›</span>
                 </button>
             </div>
+            <!-- <div class="owl-dots">
+                <button role="button" class="owl-dot"><span></span></button><button role="button"
+                    class="owl-dot"><span></span></button><button role="button"
+                    class="owl-dot"><span></span></button><button role="button"
+                    class="owl-dot"><span></span></button><button role="button"
+                    class="owl-dot active"><span></span></button>
+            </div> -->
         </div>
     </section>
 
 
 
-      <section class="bg-light" id="Location">
+    <section class="bg-light" id="Location">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -368,16 +391,14 @@
             </div>
         </div>
         <div class="container">
-        <div class="">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14879.641453218092!2d79.085111!3d21.1957195!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bd4c13b69e259ed%3A0x1b420e98092703d0!2sPlot%20for%20Sale!5e0!3m2!1sen!2sin!4v1705927202615!5m2!1sen!2sin" width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
+            <div class="">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14879.641453218092!2d79.085111!3d21.1957195!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bd4c13b69e259ed%3A0x1b420e98092703d0!2sPlot%20for%20Sale!5e0!3m2!1sen!2sin!4v1705927202615!5m2!1sen!2sin"
+                    width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
         </div>
     </section>
-
-
-
-
-
 
     <!-- Footer Start -->
     <footer>
@@ -387,11 +408,23 @@
                     <div class="col-lg-12 text-center">
                         <h4 class="navbar-brand">Space Age Consultants<span class="dot">.</span></h4>
                         <p>
-                           <b>Disclaimer :</b> The content provided on this website is for information purposes only and does not constitute an offer to avail any service. The prices mentioned are subject to change without prior notice, and the availability of properties mentioned is not guaranteed. The images displayed on the website are for representation purposes only and may not reflect the actual properties accurately. Please note that this is the official website of an authorized marketing partner. We may share data with Real Estate Regulatory Authority (RERA) registered brokers/companies for further processing as required. We may also send updates and information to the mobile number or email ID registered with us. All rights reserved. The content, design, and information on this website are protected by copyright and other intellectual property rights. Any unauthorized use or reproduction of the content may violate applicable laws. For accurate and up-to-date information regarding services, pricing, availability, and any other details, it is advisable to contact us directly through the provided contact information on this website.
-                        </p>                    
+                            <b>Disclaimer :</b> The content provided on this website is for information purposes only
+                            and does not constitute an offer to avail any service. The prices mentioned are subject to
+                            change without prior notice, and the availability of properties mentioned is not guaranteed.
+                            The images displayed on the website are for representation purposes only and may not reflect
+                            the actual properties accurately. Please note that this is the official website of an
+                            authorized marketing partner. We may share data with Real Estate Regulatory Authority (RERA)
+                            registered brokers/companies for further processing as required. We may also send updates
+                            and information to the mobile number or email ID registered with us. All rights reserved.
+                            The content, design, and information on this website are protected by copyright and other
+                            intellectual property rights. Any unauthorized use or reproduction of the content may
+                            violate applicable laws. For accurate and up-to-date information regarding services,
+                            pricing, availability, and any other details, it is advisable to contact us directly through
+                            the provided contact information on this website.
+                        </p>
                         <p>Thank you for visiting our website.</p>
-                       <p>RERA Number : Coming Soon</p>
-                       <p>Digital Media Planned by : Digital Rubix | Disclaimer & Privacy Policy</p>
+                        <p>RERA Number : Coming Soon</p>
+                        <p>Digital Media Planned by : Digital Rubix | Disclaimer & Privacy Policy</p>
                     </div>
                 </div>
             </div>
@@ -399,20 +432,25 @@
     </footer>
 
     <!-- Modal -->
-   <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-xl">
             <div class="modal-content">
                 <div class="modal-body p-0">
                     <div class="container-fluid">
                         <div class="row gy-4">
-                            <div class="col-lg-4 col-sm-12 bg-cover"
-                                style="background-image: url(img/c2.jpg); min-height: 300px">
+                            <div class="col-lg-4 col-sm-12 bg-cover" style="background-image: url(./assets/image/tour.jpg
+                                ); min-height: 300px">
                                 <div></div>
                             </div>
                             <div class="col-lg-8">
                                 <form class="p-lg-5 col-12 row g-3">
                                     <div>
+                                        <i class="fa fa-close d-flex justify-content-end" data-bs-toggle="modal" data-bs-target="#exampleModal" style="cursor:pointer"></i>                    
+                                        
                                         <h1>Get in touch</h1>
+                                        
+
+
                                         <p>
                                             Fell free to contact us and we will get back to you as
                                             soon as possible
@@ -420,17 +458,17 @@
                                     </div>
                                     <div class="col-lg-6">
                                         <label for="userName" class="form-label">First name</label>
-                                        <input type="text" class="form-control" placeholder="Jon" id="userName"
+                                        <input type="text" class="form-control" placeholder="Xyz" id="userName"
                                             aria-describedby="emailHelp" />
                                     </div>
                                     <div class="col-lg-6">
                                         <label for="userName" class="form-label">Last name</label>
-                                        <input type="text" class="form-control" placeholder="Doe" id="userName"
+                                        <input type="text" class="form-control" placeholder="Xyz" id="userName"
                                             aria-describedby="emailHelp" />
                                     </div>
                                     <div class="col-12">
                                         <label for="userName" class="form-label">Email address</label>
-                                        <input type="email" class="form-control" placeholder="Johndoe@example.com"
+                                        <input type="email" class="form-control" placeholder="Xyz@example.com"
                                             id="userName" aria-describedby="emailHelp" />
                                     </div>
                                     <div class="col-12">
@@ -452,12 +490,6 @@
             </div>
         </div>
     </div>
-
-
-
-
-
-
 
     <script src="./Prixima BS5 Template_files/jquery.min.js.download"></script>
     <script src="./Prixima BS5 Template_files/bootstrap.bundle.min.js.download"></script>
